# Tj_analyser

./: .dockerignore  .env  .env.example  .gitignore  DA_helpers  Dockerfile.backend  MR5OBOT_REPORTS_2025 - data-analysis-template.csv  Overall_performance.py  README.md  REFACTORING.md  Tj-analyse-gui.py  Tj_analyser.py  backtesting.py  config.py  d.csv  data_analyser.py  data_analyser_futures.py  gui.py  gui_cfds.py  gui_futures.py  journal_config.toml  live-fetch-cli.py  live_data_fetch.py  live_fetch.py  main.py  monthly_report.py  monthly_report_live_fetch.py  output.csv  output_data.csv  output_data.xlsx  package-lock.json  plots.py  pyproject.toml  render.yaml  requirements.txt  steps.md  streamlit-dashboard.py  streamlit-sersion.py  streamlit-version.py  streamlit_app.py  (+9 more)
backend/: __init__.py  files.py  jobs.py  jobs_smoke.py  logging_utils.py  main.py  models.py  service.py  settings.py  url_utils.py
data/: Tj_analyser.csv  Tj_analyser.xlsx  journals_for_data_analysis.xlsx  journals_for_data_analysis_futures_tpl.csv  price-level-book.csv  tj_cdfs_tpl.csv  tj_cfds_tpl.csv  tj_futures_tpl.csv  tj_template.csv
exported_data/: output_data.csv  trade_data.csv
helpers/: calculations.py  data_cleaning.py  data_preprocessing.py  df_check.py  execution_reporting.py  formulas.py  journal_normalization.py  plot_styling.py  plots.py  reporting.py  reports.py  stats.py  utils.py  visualizations.py
mobile/: .env.example  .gitignore  UI_REDESIGN.md  app.config.ts  eas.json  package-lock.json  package.json
mockups/: home-dashboard.gen.py  trades-logs.gen.py
(+63 files in other folders)
