[project]
name = "tj-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
